cluster/core/longhorn/longhorn-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard-ingressroute
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.home.danobytes.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: cluster-domain-certificate-secret
